# data-science-project

./: .env  .env.example  .gitignore  .teste.txt.un~  README.md  app.py  pyproject.toml  relatorio-executivo.qmd
.streamlit/: config.toml
data/mart/: dim_calendario.parquet  dim_envolvido.parquet  dim_localidade.parquet
data/raw/: lookup_testemunhas.parquet
docs/: dicionario_dados.md  eda.qmd  eda_modelagem.html  eda_modelagem.qmd  eda_qualidade.html  eda_qualidade.qmd
docs/.tmp/: duckdb_temp_storage_S128K-0.tmp  duckdb_temp_storage_S160K-0.tmp  duckdb_temp_storage_S192K-0.tmp
notebooks/: 01_etl.ipynb
reports/: eda_modelagem.html  eda_qualidade.html  quality_report.md  relatorio-executivo.html
src/: build_mart.py  ingest.py  transform.py
src/app/: main.py
