[project]
name = "project-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kagglehub[pandas-dataset]>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pandera>=0.31.0",
    "pathlib>=1.0.1",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
